Fix scroll on small screen

--- a/style.css
+++ b/style.css
@@ -170,3 +170,9 @@ Version: 1.0
 		        border-radius: 0px;
 	}
 }
+
+@media (max-width: 320px) {
+	.header-cta img {
+		max-width: 290px;
+	}
+}
